[package]
name = "ecfft-bn254"
version = "0.1.0"
edition = "2018"
authors = ["William Borgeaud <williamborgeaud@gmail.com>"]

[dependencies]
ark-ec = "0.4.1"
ark-ff = "0.4.2"
ark-bn254 = "0.4.0"
ark-bls12-381 = "0.4.0"
ark-std = "0.4.0"
ark-poly = "0.4.2"
num-traits = "0.2.15"
zeroize = "1.5.7"
lazy_static = "1.4.0"
seq-macro = "0.3"
test-case = "3.0.0"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "evaluations"
harness = false